# ugame

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md
assets/: barrel.frag  checkerboard.frag  cube.frag  cube.vert  line.frag  line.vert  post_process.frag  post_process.vert  simple.frag  simple.vert
src/: CMakeLists.txt  main.cpp
src/events/: CMakeLists.txt  event.h  key.h  key_event.cpp  key_event.h  mouse_button_event.cpp  mouse_button_event.h  mouse_event.cpp  mouse_event.h  stop_event.h
src/game/: CMakeLists.txt  chain.h  game.cpp  game.h  player.cpp  player.h  transformed_entity.h
src/game/levels/: CMakeLists.txt  level.h  level_apple.cpp  level_apple.h  level_kiwi.cpp  level_kiwi.h
src/graphics/: CMakeLists.txt  buffer.cpp  buffer.h  buffer_writer.h  camera.cpp  camera.h  cube_map.cpp  cube_map.h  debug_lines.cpp  debug_lines.h  debug_ui.cpp  debug_ui.h  entity.cpp  entity.h  frame_buffer.cpp  frame_buffer.h  line_data.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_data.h  mesh_factory.cpp  mesh_factory.h  opengl.h  renderer.cpp  renderer.h  sampler.cpp  sampler.h  scene.h  shader.cpp  shader.h  shape_wireframe_renderer.cpp  shape_wireframe_renderer.h  texture.cpp  texture.h  vertex_data.h  window.cpp  window.h
src/maths/: CMakeLists.txt  aabb.h  colour.h  frustum_plane.cpp  frustum_plane.h  matrix3.h  matrix4.h  quaternion.h  transform.h  vector3.h  vector4.h
src/messaging/: CMakeLists.txt  message_bus.cpp  message_bus.h  subscriber.h
src/physics/: CMakeLists.txt  box_shape.cpp  box_shape.h  character_controller.cpp  character_controller.h  cylinder_shape.cpp  cylinder_shape.h  debug_renderer.cpp  debug_renderer.h  jolt_utils.cpp  jolt_utils.h  physics_system.cpp  physics_system.h  rigid_body.cpp  rigid_body.h  shape.cpp  shape.h  sphere_shape.cpp  sphere_shape.h
src/resources/: CMakeLists.txt  file.cpp  file.h  resource_cache.h  resource_loader.cpp  resource_loader.h
src/scripting/: CMakeLists.txt  lua_script.cpp  lua_script.h  script_runner.h  vector3_interop.cpp  vector3_interop.h
src/tlv/: CMakeLists.txt  tlv_entry.cpp  tlv_entry.h  tlv_reader.cpp  tlv_reader.h  tlv_writer.cpp  tlv_writer.h
src/utils/: CMakeLists.txt  auto_release.h  error.h  exception.cpp  exception.h  formatter.h  log.h  pass_key.h  string_map.h
tests/: CMakeLists.txt  auto_release_tests.cpp  camera_object_transformer_tests.cpp  camera_tests.cpp  chain_tests.cpp  error_tests.cpp  frustum_plane_tests.cpp  inverse_camera_object_transformer_tests.cpp  lua_interop_tests.cpp  lua_script_tests.cpp  matrix3_tests.cpp  matrix4_tests.cpp  message_bus_tests.cpp  resource_cache_tests.cpp  script_runner_tests.cpp  shape_wireframe_renderer_tests.cpp  static_object_transformer_tests.cpp  tlv_tests.cpp  utils.h  vector3_tests.cpp  vector4_tests.cpp
tools/: CMakeLists.txt
tools/resource_packer/: CMakeLists.txt  main.cpp
